[package]
name = "strigoi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
# Useful for predefined log macros and a decent trait for loggers
log = "0.4.17"
# Useful for styling text in the terminal
lliw = "0.2.0"
# Useful for getting time in a simple manner
chrono = "0.4.19"
